# bridge

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
crates/bridge-cli/: Cargo.toml
crates/bridge-cli/src/: lib.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: bridge.rs  lib.rs  mcp.rs  openapi.rs
crates/http/tests/: integration_tests.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: bridge.rs  lib.rs  middleware.rs
crates/mcp/src/middleware/: request.rs  response.rs
crates/postgres/: Cargo.toml  README.md
crates/postgres/src/: bridge.rs  conn_string.rs  lib.rs  maybe_tls_stream.rs  mcp.rs  schema.rs
crates/postgres/src/mcp/: value.rs
crates/registry/: Cargo.toml  build.rs
crates/registry/src/: client.rs  lib.rs  protobuf.rs
protobuf/registry/v1/: service.proto
