[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/brwse/bridge.git"

[workspace.dependencies]
anyhow = "1.0"
assert2 = "0.3"
async-trait = "0.1"
base64 = "0.22"
base64-serde = "0.8"
brwse-bridge-cli = { path = "crates/bridge-cli" }
brwse-bridge-registry = { path = "crates/registry" }
byteorder = "1.5"
brwse-bridge-mcp = { path = "crates/mcp" }
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
cidr = { version = "0.3", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
derive_builder = "0.20"
derive-into-owned = "0.2"
eui48 = { version = "1.1", features = ["serde"] }
futures = "0.3"
genawaiter = "0.99"
geo-types = { version = "0.7", features = ["serde"] }
headless_chrome = "1.0"
indexmap = { version = "2.9", features = ["serde"] }
insta = { version = "1.43", features = ["filters", "json"] }
jsonschema = "0.30"
jsonwebtoken = "9.3"
schemars = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
prost = "0.13"
prost-types = "0.13"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
test-log = "0.2"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.45", features = ["full"] }
tokio-native-tls = { version = "0.3" }
tokio-postgres = { version = "0.7", features = [
    "array-impls",
    "with-cidr-0_3",
    "with-uuid-1",
    "with-time-0_3",
    "with-geo-types-0_7",
    "with-eui48-1",
    "with-serde_json-1",
] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "9ca20c69b27e531a5eadfd4b5654592ab93e2b11", features = [
    "server",
    "transport-sse-server",
    "client",
    "transport-sse-client",
    "reqwest",
] }
tokio-stream = "0.1"
tokio-tungstenite = "0.27"
tokio-util = { version = "0.7", features = ["codec"] }
tonic = "0.13"
tonic-build = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
uuid = { version = "1.17", features = ["serde", "v7"] }
tempfile = "3.0"
wiremock = "0.6"
