[package]
name = "brwse-bridge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brwse-bridge-registry.workspace = true
chrono.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
