[package]
name = "brwse-bridge-cli"
version = "0.0.1"
description = "CLI library for Brwse bridges."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brwse-bridge-registry = { version = "0.0.2" }
chrono.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
