[package]
name = "brwse-bridge-http"
version = "0.0.1"
description = "Experimental HTTP bridge for Brwse."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "http-bridge"
path = "src/bin/http-bridge.rs"

[dependencies]
async-trait.workspace = true
base64.workspace = true
brwse-bridge-cli = { version = "0.0.1" }
clap.workspace = true
futures.workspace = true
genawaiter.workspace = true
indexmap.workspace = true
jsonschema.workspace = true
openapiv3 = "2.0"
openssl.workspace = true
rand.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
wiremock.workspace = true
