[package]
name = "brwse-bridge-mcp"
version = "0.0.1"
description = "Experimental MCP bridge for Brwse."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-bridge"
path = "src/bin/mcp-bridge.rs"

[dependencies]
async-trait.workspace = true
base64.workspace = true
brwse-bridge-cli.workspace = true
clap.workspace = true
futures.workspace = true
genawaiter.workspace = true
indexmap.workspace = true
jsonschema.workspace = true
openapiv3 = "2.0"
openssl.workspace = true
rand.workspace = true
reqwest.workspace = true
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = [
    "server",
    "transport-sse-server",
    "client",
    "transport-sse-client",
    "reqwest",
] }
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio-util.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
wiremock.workspace = true
