[package]
name = "brwse-bridge-mcp"
version = "0.0.1"
description = "Experimental MCP bridge for Brwse."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-bridge"
path = "src/bin/mcp-bridge.rs"

[dependencies]
brwse-bridge-cli.workspace = true
clap.workspace = true
futures.workspace = true
rmcp.workspace = true
time.workspace = true
tokio-util.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
wiremock.workspace = true
