[package]
name = "brwse-bridge-postgres"
version = "0.1.0"
description = "Experimental PostgreSQL bridge for Brwse."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "postgres-bridge"
path = "src/bin/postgres-bridge.rs"

[features]
default = ["mcp"]
mcp = [
    "dep:base64-serde",
    "dep:base64",
    "dep:cidr",
    "dep:eui48",
    "dep:geo-types",
    "dep:rmcp",
    "dep:tokio-postgres",
    "dep:uuid",
]

[dependencies]
rand.workspace = true
assert2.workspace = true
async-trait.workspace = true
base64 = { workspace = true, optional = true }
base64-serde = { workspace = true, optional = true }
brwse-bridge-cli.workspace = true
byteorder.workspace = true
bytes.workspace = true
cidr = { workspace = true, optional = true }
clap.workspace = true
eui48 = { workspace = true, optional = true }
futures.workspace = true
geo-types = { workspace = true, optional = true }
indexmap.workspace = true
rmcp = { workspace = true, optional = true }
serde_json.workspace = true
serde.workspace = true
time.workspace = true
tokio-postgres = { workspace = true, optional = true }
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tokio-native-tls.workspace = true
urlencoding = "2.1"
uuid = { workspace = true, optional = true }
genawaiter.workspace = true

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
testcontainers-modules.workspace = true
tokio-postgres.workspace = true
