[package]
name = "brwse-bridge-postgres"
version = "0.0.2"
description = "Experimental PostgreSQL bridge for Brwse."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "postgres-bridge"
path = "src/bin/postgres-bridge.rs"

[dependencies]
async-trait.workspace = true
base64-serde.workspace = true
base64.workspace = true
brwse-bridge-cli.workspace = true
byteorder.workspace = true
bytes.workspace = true
cidr.workspace = true
clap.workspace = true
eui48.workspace = true
futures.workspace = true
genawaiter.workspace = true
geo-types.workspace = true
indexmap.workspace = true
openssl.workspace = true
jsonschema.workspace = true
assert2.workspace = true
schemars.workspace = true
rand.workspace = true
rmcp.workspace = true
serde_json.workspace = true
serde.workspace = true
time.workspace = true
tokio-native-tls.workspace = true
tokio-postgres.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
testcontainers-modules.workspace = true
tokio-postgres.workspace = true
