[package]
name = "brwse-bridge-registry"
version = "0.0.2"
description = "Registry service for managing bridges in Brwse."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
assert2.workspace = true
byteorder.workspace = true
tokio-util.workspace = true
tokio.workspace = true
futures.workspace = true
testcontainers-modules.workspace = true
bytes.workspace = true
tracing.workspace = true
async-trait.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
derive_builder.workspace = true

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
test-log.workspace = true
rsa.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-build.workspace = true
